--- a/src/app/styles/general/_common.scss
+++ b/src/app/styles/general/_common.scss
@@ -42,3 +42,12 @@ img {
 .align-center {
   text-align: center;
 }
+
+%underlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.35);
+}
