--- a/src/app/styles/general/_typography.scss
+++ b/src/app/styles/general/_typography.scss
@@ -1,10 +1,28 @@
 
 body {
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 18px;
+  font-size: 12px;
+  line-height: 14px;
 }
 
 .font--heading {
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
+}
+
+%text-shadow {
+  text-shadow: 0 1px rgba(0,0,0,0.5);
+}
+
+// Headings
+
+%heading-medium {
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: bold;
+}
+
+%heading-medium--sml {
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: bold;
 }
