--- a/src/app/event/cards/_event.preview.card.html
+++ b/src/app/event/cards/_event.preview.card.html
@@ -8,6 +8,11 @@
       Ab amet beatae corporis deserunt dolorem doloribus hic impedit magni minima molestias.
     </p>
   </div>
-  <div class="event-major-preview-card__time">TIME</div>
-  <div class="event-major-preview-card__follow">FOLLOW</div>
+  <div class="event-major-preview-card__time">01:43:27</div>
+  <div class="event-major-preview-card__follow">
+    <button class="btn btn--main btn--main--mini">
+      Follow
+      <span class="icon icon-star-empty"></span>
+    </button>
+  </div>
 </div>
