--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -10,6 +10,9 @@
 @import "styles/general/typography";
 @import "styles/general/common";
 @import "styles/general/general";
+@import "styles/general/buttons";
+
+@import "styles/components/slider";
 
 @import "styles/common/header";
 
