user notifications and options

--- a/src/app/event/cards/_event.card.html
+++ b/src/app/event/cards/_event.card.html
@@ -14,9 +14,13 @@
     </div>
   </div>
   <div class="event-card__options">
-    <button class="btn btn--main btn--main--mini">
+    <button class="btn btn--plain btn--plain--highlightable">
       Follow
       <span class="icon icon-star-empty"></span>
+    </button>
+    <button class="btn btn--plain right-side">
+      <span class="icon icon-comment"></span>
+      41
     </button>
   </div>
 </div>
