--- a/src/app/styles/common/_header.scss
+++ b/src/app/styles/common/_header.scss
@@ -57,36 +57,226 @@ $site-header__offset: 15px;
   @extend .clearfix;
 }
 
-  .user-fixed__notifications,
-  .user-fixed__thumb {
+  .user-fixed__notifications-wrapper,
+  .user-fixed__thumb-wrapper {
+    position: relative;
     float: left;
   }
 
-  .user-fixed__notifications {
-    @include border-radius(50%);
-
-    width: 28px;
-    height: 28px;
-    background-color: #FF094B;
-    color: #ffffff;
-    cursor: pointer;
-
-    text-align: center;
-    line-height: 28px;
-    font-weight: 700;
-    font-size: 14px;
+  .user-fixed__notifications-wrapper {
     margin-top: 12px;
+
+    &.state--open {
+
+      .user-fixed__notifications {
+
+        &:hover {
+
+          .icon {
+            transform: translate(0,-28px);
+          }
+
+          .count {
+            transform: translate(0,-28px);
+          }
+
+        }
+
+        &:active {
+          transform: scale(0.9);
+        }
+
+      }
+
+    }
+
+  }
+
+    .user-fixed__notifications {
+      @include border-radius(50%);
+      @include transition(transform 250ms ease);
+
+      width: 28px;
+      height: 28px;
+      background-color: #FF094B;
+      color: #ffffff;
+      cursor: pointer;
+      position: relative;
+
+      text-align: center;
+      line-height: 28px;
+      font-weight: 700;
+      font-size: 14px;
+      overflow: hidden;
+
+      &:active {
+        transform: scale(1.1);
+      }
+
+      .count,
+      .icon {
+        @include transition(transform 250ms ease);
+
+        display: inline-block;
+      }
+
+    }
+
+    .user-fixed__notifications__dropdown {
+      @extend %popToggle;
+      //@extend %growToggle;
+      @include border-radius(20px);
+      @include box-shadow(0, 0, 10px, rgba(0,0,0,0.1));
+
+      position: absolute;
+      top: -10px;
+      right: -10px;
+
+      background-color: #ffffff;
+      width: 250px;
+      padding-bottom: 5px;
+      overflow: hidden;
+
+      header {
+        padding: 20px 10px 0 10px;
+      }
+
+      h3 {
+        color: $clr-dark;
+        font-weight: 500;
+        padding-bottom: 10px;
+        padding-left: 5px;
+        border-bottom: 1px solid $clr-cream;
+        //margin-bottom: 10px;
+      }
+
+    }
+
+  .user-fixed__thumb-wrapper {
+
+    &.state--open {
+
+      .user-fixed__thumb {
+
+        &:active {
+          transform: scale(0.9);
+        }
+
+      }
+
+    }
+
   }
 
   .user-fixed__thumb {
-    @extend .img-cover;
-
     @include border-radius(50%);
+    @include transition(transform 250ms ease);
 
     width: 48px;
     height: 48px;
+    position: relative;
 
-    background-color: #ffffff;
     cursor: pointer;
-    margin-left: 12px;
+    margin-left: 20px;
+    text-align: center;
+    overflow: hidden;
+
+    &:active {
+      transform: scale(1.1);
+    }
+
+    &:hover {
+
+      //.icon {
+      //  background-color: rgba(255,255,255,0.95);
+      //}
+
+    }
+
+    .image {
+      @extend .img-cover;
+      @include border-radius(50%);
+      width: 100%;
+      height: 100%;
+    }
+
+    //.icon {
+    //  @include border-radius(50%);
+    //  @include transition(all 250ms ease);
+    //
+    //  line-height: 50px;
+    //  font-size: 15px;
+    //  background-color: rgba(255,255,255,0.75);
+    //
+    //  position: absolute;
+    //  top: -2px;
+    //  left: -2px;
+    //  right: -2px;
+    //  bottom: -2px;
+    //}
+
+  }
+
+  .user-fixed__thumb__dropdown {
+    @include border-radius(30px);
+
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 220px;
+  }
+
+.rounded-dropdown {
+  @extend %popToggle;
+  @include box-shadow(0, 0, 10px, rgba(0,0,0,0.1));
+
+  background-color: white;
+  overflow: hidden;
+  padding-bottom: 10px;
+}
+
+  .rounded-dropdown__header {
+    color: $clr-dark;
+    cursor: pointer;
+    padding: 20px 67px 20px 20px;
+    border-bottom: 1px solid $clr-cream;
+
+    &:hover {
+      background-color: $clr-primary;
+      color: #ffffff;
+
+      p {
+        color: #ffffff;
+      }
+
+    }
+
+    h3 {
+      font-size: 15px;
+      line-height: 18px;
+      font-weight: bold;
+    }
+
+    p {
+      color: $clr-medium;
+    }
+
+  }
+
+  .rounded-dropdown__list {
+
+    a {
+      color: $clr-dark;
+      cursor: pointer;
+      font-size: 14px;
+      display: block;
+      padding: 20px;
+
+      &:hover {
+        background-color: $clr-primary;
+        color: #ffffff;
+      }
+
+    }
+
   }
