--- a/src/app/styles/general/_common.scss
+++ b/src/app/styles/general/_common.scss
@@ -1,5 +1,11 @@
 //** General Classes
 
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .clearfix:after{
   display:block;visibility:hidden;clear:both;height:0;content:" ";font-size:0
 }
