--- a/src/app/styles/pages/_main.scss
+++ b/src/app/styles/pages/_main.scss
@@ -1,5 +1,28 @@
 .main-body {
-  margin-top: 40px;
+  margin: 40px 0 80px 0;
+
+  .events-category {
+    margin-bottom: 40px;
+  }
+
 }
 
-.main-body__top {}
+.main-body__top {
+  @extend .clearfix;
+
+  .events-category {
+    float: left;
+  }
+
+}
+
+.main-aside {
+  float: right;
+  width: $event-card-width;
+  margin-left: 20px;
+
+  .btn--big {
+    margin-bottom: 20px;
+  }
+
+}
