--- a/src/app/general/_preview.slider.html
+++ b/src/app/general/_preview.slider.html
@@ -5,8 +5,12 @@
                style="background-image:url(/assets/images/placeholder/event-1.jpg);">
         <div class="underlay"></div>
         <div class="content">
-          <h3>03:53:25</h3>
-          <h4>Some Event</h4>
+          <div class="when-wrapper">
+            <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+          </div>
+          <div class="title-wrapper">
+            <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+          </div>
           <button class="btn btn--main">
             Follow
             <span class="icon icon-star-empty"></span>
@@ -18,8 +22,12 @@
              style="background-image:url(/assets/images/placeholder/event-2.jpg);">
       <div class="underlay"></div>
       <div class="content">
-        <h3>03:53:25</h3>
-        <h4>Hong Kong 2016 Trip</h4>
+        <div class="when-wrapper">
+          <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+        </div>
+        <div class="title-wrapper">
+          <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+        </div>
         <button class="btn btn--main">
           Follow
           <span class="icon icon-star-empty"></span>
@@ -31,8 +39,12 @@
              style="background-image:url(/assets/images/placeholder/event-3.jpg);">
       <div class="underlay"></div>
       <div class="content">
-        <h3>03:53:25</h3>
-        <h4>Hong Kong 2016 Trip</h4>
+        <div class="when-wrapper">
+          <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+        </div>
+        <div class="title-wrapper">
+          <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+        </div>
         <button class="btn btn--main">
           Follow
           <span class="icon icon-star-empty"></span>
@@ -44,8 +56,12 @@
              style="background-image:url(/assets/images/placeholder/event-4.jpg);">
       <div class="underlay"></div>
       <div class="content">
-        <h3>03:53:25</h3>
-        <h4>Hong Kong 2016 Trip</h4>
+        <div class="when-wrapper">
+          <a class="when" ui-sref="event({id: 'boop', slug: 'woop'})">03:53:25</a>
+        </div>
+        <div class="title-wrapper">
+          <a class="title" ui-sref="event({id: 'boop', slug: 'woop'})">Some Event</a>
+        </div>
         <button class="btn btn--main">
           Follow
           <span class="icon icon-star-empty"></span>
