--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -28,6 +28,9 @@
 @import "styles/event/event.card";
 @import "styles/event/event.mini.card";
 
+@import "styles/event/event";
+@import "styles/event/components/event.header";
+
 /* Do not remove the comments below. It's the markers used by gulp-inject to inject
    all your sass files automatically */
 // BOOPinjector
