--- a/src/app/styles/event/_event.major.preview.scss
+++ b/src/app/styles/event/_event.major.preview.scss
@@ -26,20 +26,24 @@
       text-align: center;
     }
 
-    h3 {
+    .when {
       @extend %text-shadow;
-
       font-weight: bold;
       font-size: 78px;
       line-height: 64px;
     }
 
-    h4 {
+    .title-wrapper {
+      margin: 24px 0 30px 0;
+    }
+
+    .title {
       @extend %text-shadow;
+      //@extend %link-hover;
 
       font-size: 42px;
       line-height: 50px;
-      margin: 24px 0 30px 0;
+
     }
 
   }
