--- a/src/app/styles/general/_typography.scss
+++ b/src/app/styles/general/_typography.scss
@@ -37,9 +37,32 @@ body {
 
 a {
   color: inherit;
+  text-decoration: none;
 
   &[ng-click] {
     cursor: pointer;
   }
 
+}
+
+%link-hover {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+}
+
+.heading--medium {
+  color: $clr-dark;
+  font-size: 22px;
+  line-height: 22px;
+  font-weight: 500;
+}
+
+.text--medium {
+  color: $clr-dark;
+  font-size: 15px;
+  line-height: 20px;
 }
